--- a/index.html
+++ b/index.html
@@ -95,6 +95,21 @@ http://www.tooplate.com/view/2078-adventure
 </section>
 
 
+<!-- Google Analytics Tracking ID
+================================================== -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-102600722-4', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
 <!-- Homepage section
 ================================================== -->
 <div id="home">
@@ -309,9 +324,11 @@ http://www.tooplate.com/view/2078-adventure
 						<li>Content Creation</li>
 						<li>Customer interaction</li>
 						<li>First-Level Analytics</li>
+						<li>Website Creation</li>
 					</ul>
 					<div class="plan-button">
-						<button class="btn btn-default">CHOOSE PLAN</button>
+						
+					<a href="startup.html"> <button class="btn btn-default">CHOOSE PLAN</button></a>
 					</div>
 				</div>
 			</div>
@@ -329,7 +346,7 @@ http://www.tooplate.com/view/2078-adventure
 						<!--<li></li>-->
 					</ul>
 					<div class="plan-button">
-						<button class="btn btn-default">CHOOSE PLAN</button>
+						<a href="onlinepresence.html"> <button class="btn btn-default">CHOOSE PLAN</button></a>
 					</div>
 				</div>
 			</div>
@@ -347,7 +364,7 @@ http://www.tooplate.com/view/2078-adventure
 						<!--<li></li>-->
 					</ul>
 					<div class="plan-button">
-						<button class="btn btn-default">CHOOSE PLAN</button>
+						<a href="company.html"> <button class="btn btn-default">CHOOSE PLAN</button></a>
 					</div>
 				</div>
 			</div>
