--- a/startup.html
+++ b/startup.html
@@ -211,12 +211,13 @@ http://www.tooplate.com/view/2078-adventure
 					<h5 class="wow bounceIn">PLAN YOUR TRIP</h5>
 					<h1 class="heading">CONTACT US</h1>
 					<hr>
-					<p></p>
+					<p>We like to meet in person before any money is exchanged so we know how to best serve you.</p>
 				</div>
 			</div>
 
 			<!-- Contact form section
 			================================================== -->
+			<!--
 			<div class="col-md-offset-1 col-md-10 col-sm-12">
 				<form action="#" method="post" class="wow fadeInUp" data-wow-delay="0.6s">
 					<div class="col-md-4 col-sm-6">
@@ -236,6 +237,7 @@ http://www.tooplate.com/view/2078-adventure
 					</div>
 				</form>
 			</div>
+			-->
 
 			<!-- Contact detail section
 			================================================== -->
@@ -245,8 +247,8 @@ http://www.tooplate.com/view/2078-adventure
 					<p>vester.diegoguerrero@gmail.com</p>
 				</div>
 				<div class="col-md-6 col-sm-6">
-					<h3><i class="icon-phone medium-icon wow bounceIn" data-wow-delay="0.6s"></i> PHONES</h3>
-					<p>(830) 900-6881 | (830) 322-4149</p>
+					<h3><i class="icon-phone medium-icon wow bounceIn" data-wow-delay="0.6s"></i> PHONE</h3>
+					<p>(830) 900-6881</p>
 				</div>
 			</div>
 
