--- a/startup.html
+++ b/startup.html
@@ -208,7 +208,7 @@ http://www.tooplate.com/view/2078-adventure
 			================================================== -->
 			<div class="col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8">
 				<div class="section-title">
-					<h5 class="wow bounceIn">PLAN YOUR TRIP</h5>
+					<h5 class="wow bounceIn">Don't be shy!</h5>
 					<h1 class="heading">CONTACT US</h1>
 					<hr>
 					<p>We like to meet in person before any money is exchanged so we know how to best serve you.</p>
@@ -277,7 +277,7 @@ http://www.tooplate.com/view/2078-adventure
 
 
 
-				
+				<!--
 				<ul class="social-icon">
 					<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
 					<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
@@ -286,6 +286,7 @@ http://www.tooplate.com/view/2078-adventure
 					<li><a href="#" class="fa fa-github wow fadeIn" data-wow-delay="1.3s"></a></li>
 					<li><a href="#" class="fa fa-tumblr wow fadeIn" data-wow-delay="1.6s"></a></li>
 				</ul>
+				-->
 				<p>Copyright &copy; 2017 Vester Media 
                 <!--
                 | Design: <a rel="nofollow" href="http://www.tooplate.com/free-templates" target="_parent">Tooplate</a></p>
